change static thingis

--- a/css/LikelyMain.css
+++ b/css/LikelyMain.css
@@ -209,7 +209,7 @@ body {
 }
 
 #predict-button {
-    background: linear-gradient(to top right, #fccc63, #fbad50 ,#e95950, #bc2a8d, #8a3ab9, #8a3ab9, #8a3ab9, #8a3ab9);
+    background: linear-gradient(to top right, #fccc63, #fbad50 ,#e95950, #bc2a8d, #8a3ab9, #8a3ab9, #8a3ab9, #8a3ab9, #8a3ab9);
     color: #fff;
     border-radius: 0.5rem;
     width: 50%;
