--- a/css/LikelyMain.css
+++ b/css/LikelyMain.css
@@ -190,7 +190,7 @@ body {
     background-size: 40px;
     background-repeat: no-repeat;
     background-position: 50% 30%;
-    height: 7rem;
+    height: 9rem;
     margin: auto;
 }
 
@@ -199,7 +199,7 @@ body {
     background-size: 40px;
     background-repeat: no-repeat;
     background-position: 50% 30%;
-    height: 7rem;
+    height: 9rem;
     margin: auto;
 }
 
@@ -217,6 +217,11 @@ body {
     position: relative;
     right: -10%;
     margin-top: 1rem;
+}
+
+#upload-photo input {
+    width: 80%;
+    padding-top: 1rem;
 }
 
 #predict-button {
