--- a/css/LikelyMain.css
+++ b/css/LikelyMain.css
@@ -224,7 +224,7 @@ body {
     padding-top: 1rem;
 }
 
-#predict-button {
+#predict-button input{
     background: linear-gradient(to top right, #fccc63, #fbad50 ,#e95950, #bc2a8d, #8a3ab9, #8a3ab9, #8a3ab9, #8a3ab9, #8a3ab9);
     color: #fff;
     border-radius: 0.5rem;
