--- a/css/LikelyMain.css
+++ b/css/LikelyMain.css
@@ -139,6 +139,10 @@ body {
     margin-top: 2.7rem;
 }
 
+#logo-line a {
+    color: #000;
+}
+
 #user-info {
     min-height: 80px;
     border-top: solid 1px #e8e8e8;
@@ -240,6 +244,7 @@ body {
     margin: 2rem auto;
     padding-top: 0.2rem;
 }
+
 
 
 
