--- a/css/LikelyMainRes.css
+++ b/css/LikelyMainRes.css
@@ -6,7 +6,7 @@
         background-repeat: no-repeat;
         background-position: center;
         height: 90px;
-        width: 24%;
+        width: 17rem;
         display: inline-block;
         margin: auto;
         padding-top: 20px;
@@ -19,7 +19,7 @@
         width: 40%;
         text-align: left;
         margin-top: 2.7rem;
-        margin-left: -2rem;
+        margin-left: -1rem;
         color: #000;
     }
 
