--- a/css/LikelyResults.css
+++ b/css/LikelyResults.css
@@ -219,6 +219,53 @@ a {
 
 
 
+#bars {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    min-height: 8rem;
+    align-items: stretch;
+    position: relative;
+    font-size: 0.8em;
+}
+
+.bar {
+    align-self: flex-end;
+}
+
+#suggestions {
+    text-align: center;
+    border: solid 1px #e8e8e8;
+    border-radius: 10px;
+    padding: 1rem;
+
+}
+#suggest_head {
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+#hours_head {
+    margin-bottom: 2rem;
+}
+.likes_value {
+    background-color: #8a3ab9;
+    position: absolute;
+    height: 1.6rem;
+    width: 1.6rem;
+    text-align: center;
+    border-radius: 0.8rem;
+    color: #fff;
+    line-height: 1.5rem;
+}
+
+.hour_value {
+    margin-top: 9rem;
+    text-align: center;
+    width: 2rem;
+}
+
+
+
+
 
 
 #predict-button input{
