--- a/css/LikelyMain.css
+++ b/css/LikelyMain.css
@@ -250,6 +250,23 @@ body {
     padding-top: 0.2rem;
 }
 
+#loader_cont{
+    display: none;
+}
+
+.loader {
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #8a3ab9; /* Blue */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 
 
