--- a/css/LikelyMain.css
+++ b/css/LikelyMain.css
@@ -252,7 +252,7 @@ body {
 
 #loader_cont{
     display: none;
-    margin: auto;
+    margin-top: -1rem;
 }
 
 .loader {
@@ -262,6 +262,7 @@ body {
     width: 40px;
     height: 40px;
     animation: spin 2s linear infinite;
+    margin: auto;
 }
 
 @keyframes spin {
